<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/group1">
        <item
            android:id="@+id/star1"
            android:icon="@drawable/ic_star_border_black_24dp"
            android:title="@string/star1" />
        <item
            android:id="@+id/star2"
            android:icon="@drawable/ic_stars_black_24dp"
            android:title="@string/star2" />
    </group>

    <group android:id="@+id/group2">
        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/about" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:title="@string/logout" />
    </group>

</menu>
