<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inst_title" />

        <EditText
            android:id="@+id/gdt_inst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inst_type_title" />

        <Spinner
            android:id="@+id/gdt_inst_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></Spinner>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/progr_title" />

        <EditText
            android:id="@+id/gdt_progr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/progr_type_title" />

        <Spinner
            android:id="@+id/gdt_progr_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></Spinner>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_date_title" />

        <Button
            android:id="@+id/buttonstar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Fecha"
            android:textSize="12sp"/>

        <EditText
            android:id="@+id/gdt_start_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:digits="0123456789-"
            android:maxLength="10"
            android:hint="@string/date_title"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_date_title" />

        <Button
            android:id="@+id/buttonend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Fecha"
            android:textSize="12sp"/>

        <EditText
            android:id="@+id/gdt_end_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:digits="0123456789-"
            android:maxLength="10"
            android:hint="@string/date_title"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cert_date_title" />

        <Button
            android:id="@+id/buttoncert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Fecha"
            android:textSize="12sp"/>

        <EditText
            android:id="@+id/gdt_cert_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:digits="0123456789-"
            android:maxLength="10"
            android:hint="@string/date_title"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/class_hours_title" />

        <EditText
            android:id="@+id/gdt_class_hours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="5"
            android:inputType="number"/>

        <Button
            android:id="@+id/action_delete"
            style="@style/SeeMore"
            android:text="@string/post_del"
            android:textSize="16sp" />

    </LinearLayout>

</ScrollView>