<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--- Edit Profile Photo -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/gdt_photo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/juan" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/editPhoto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignBottom="@+id/gdt_photo"
                android:layout_alignStart="@+id/gdt_photo"
                android:layout_marginStart="76dp"
                android:clickable="true"
                android:src="@drawable/ic_create_black_24dp"
                android:tint="@color/white"
                app:fabSize="mini" />

        </RelativeLayout>

        <!--- No editable CardView -->

        <android.support.v7.widget.CardView
            android:id="@+id/card_dataPerNoEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <!--- Name -->

                <TextView
                    android:id="@+id/name_title"
                    style="@style/PersonalDataTitles"
                    android:text="@string/name_title" />

                <TextView
                    android:id="@+id/name_text"
                    style="@style/PersonalDataTexts" />

                <!--- DNI -->

                <TextView
                    android:id="@+id/dni_title"
                    style="@style/PersonalDataTitles"
                    android:text="@string/dni_title" />

                <TextView
                    android:id="@+id/dni_text"
                    style="@style/PersonalDataTexts" />

                <!--- Birthday -->

                <TextView
                    android:id="@+id/birthday_title"
                    style="@style/PersonalDataTitles"
                    android:text="@string/birthday_title" />

                <TextView
                    android:id="@+id/birthday_text"
                    style="@style/PersonalDataTexts" />

                <!--- Birthplace -->

                <TextView
                    android:id="@+id/birthplace_title"
                    style="@style/PersonalDataTitles"
                    android:text="@string/birthplace_title" />

                <TextView
                    android:id="@+id/birthplace_text"
                    style="@style/PersonalDataTexts"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!--- Editable CardView -->

        <android.support.v7.widget.CardView
            android:id="@+id/card_dataPerEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <!--- Edit Icon -->

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <ImageView
                    android:id="@+id/edit_pers"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_create_black_24dp"
                    android:tint="@color/grey" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <!--- Civil state -->

                <TextView
                    android:id="@+id/civilS_title"
                    style="@style/PersonalDataTitles"
                    android:text="@string/civil_state_title" />

                <TextView
                    android:id="@+id/civilS_text"
                    style="@style/PersonalDataTexts"/>

                <!--- No. Children -->

                <TextView
                    android:id="@+id/nchildren_title"
                    style="@style/PersonalDataTitles"
                    android:text="@string/children_title" />

                <TextView
                    android:id="@+id/nchildren_text"
                    style="@style/PersonalDataTexts"/>

                <!--- Address -->

                <TextView
                    android:id="@+id/address_title"
                    style="@style/PersonalDataTitles"
                    android:text="@string/address_title"/>

                <TextView
                    android:id="@+id/address_text"
                    style="@style/PersonalDataTexts" />

                <!--- Place of Residence -->

                <TextView
                    android:id="@+id/ubigeo_title"
                    style="@style/PersonalDataTitles"
                    android:text="@string/address_detail_title" />

                <TextView
                    android:id="@+id/ubigeo_text"
                    style="@style/PersonalDataTexts" />

                <!--- Telephone number -->

                <TextView
                    android:id="@+id/ntelph_title"
                    style="@style/PersonalDataTitles"
                    android:text="@string/phone_title" />

                <TextView
                    android:id="@+id/ntelph_text"
                    style="@style/PersonalDataTexts"/>

                <!--- Cellphone number -->

                <TextView
                    android:id="@+id/ncell_title"
                    style="@style/PersonalDataTitles"
                    android:text="@string/cellphone_title" />

                <TextView
                    android:id="@+id/ncell_text"
                    style="@style/PersonalDataTexts" />

                <!--- Personal e-mail -->

                <TextView
                    android:id="@+id/per_email_title"
                    style="@style/PersonalDataTitles"
                    android:text="@string/pers_email_title" />

                <TextView
                    android:id="@+id/per_email_text"
                    style="@style/PersonalDataTexts" />

                <!--- Work e-mail -->

                <TextView
                    android:id="@+id/work_email_title"
                    style="@style/PersonalDataTitles"
                    android:text="@string/work_email_title" />

                <TextView
                    android:id="@+id/work_email_text"
                    style="@style/PersonalDataTexts" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>